--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -149,10 +149,12 @@
         </div>
     </nav>
 
+    <div style="margin: 40px 0;"></div>
 
-    <div class="container body-content">
+
+
+    <div >
         @RenderBody()
-        <hr />
 
     </div>
 
