--- a/Views/Catalogo/AdministrarPlatos.cshtml
+++ b/Views/Catalogo/AdministrarPlatos.cshtml
@@ -8,7 +8,7 @@
 <h1>Platos</h1>
 
 <!-- Tabla de Platos -->
-<table id="categoryTable" >
+<table id="plateTable" class="table">
     <thead>
         <tr>
             <th>ID</th>
@@ -28,7 +28,7 @@
                 <td>@platillo.IdPlatillo</td>
                 <td>@platillo.Nombre</td>
                 <td>@platillo.Descripcion</td>
-                <td>@platillo.Precio.ToString("C", new System.Globalization.CultureInfo("es-CR"))</td>
+                <td>@platillo.Precio.ToString("C")</td>
                 <td><img src="@platillo.Imagen" alt="@platillo.Nombre" width="50" /></td>
                 <td>@platillo.IdCategoria</td>
                 <td>@(platillo.Activo ? "Disponible" : "No Disponible")</td>
@@ -243,13 +243,13 @@
 
 // función editarPlatillo
 function editarPlatillo(platilloId) {
-    console.log('Editando platillo ID:', platilloId); 
+    console.log('Editando platillo ID:', platilloId); // Añade este log
     platilloEditandoId = platilloId;
 
     fetch(`/api/CatalogoService/platillos/${platilloId}`)
         .then(response => response.json())
         .then(data => {
-            console.log('Datos obtenidos del servidor:', data);
+            console.log('Datos obtenidos del servidor:', data); // Añade este log
             document.getElementById("platilloNombre").value = data.nombre;
             document.getElementById("platilloDescripcion").value = data.descripcion;
             document.getElementById("platilloPrecio").value = data.precio;
