--- a/Views/Usuario/RestablecerContrasenia.cshtml
+++ b/Views/Usuario/RestablecerContrasenia.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml"; 
+    Layout = "~/Views/Shared/_LayoutExterno.cshtml"; //Layout externo
 }
 @model JarredsOrderHub.Models.ResetContraseniaViewModel
 <link rel="stylesheet" href="~/css/InicioSesion.css" />
@@ -26,7 +26,7 @@
     }
 
     <div class="login-html">
-        <h2 style="color: #2EA629; margin-bottom: 20px;">Restablecer Contraseña</h2>
+        <h2>Restablecer Contraseña</h2>
         <div class="login-form">
             <form method="post" asp-action="RestablecerContrasenia" asp-controller="Usuario">
                 <div class="group">
