--- a/Views/Envio/EstadoPedido.cshtml
+++ b/Views/Envio/EstadoPedido.cshtml
@@ -34,8 +34,12 @@
 <!-- Modal para Calificación -->
 <div id="ratingModal" class="modal active">
     <div class="modal-content">
-        <span class="close" id="closeRatingModal">&times;</span>
-        <h2 class="secondary-title">Califica tu Pedido</h2>
+        <div class="modal-header">
+            <h2 class="secondary-title">Califica tu Pedido</h2>
+            <span class="close" id="closeRatingModal">&times;</span>
+        </div>
+        
+        
         <p>Por favor califica tu experiencia con el pedido entregado.</p>
 
         <!-- Sección de estrellas -->
