--- a/Views/Reporte/AdministracionReportes.cshtml
+++ b/Views/Reporte/AdministracionReportes.cshtml
@@ -51,8 +51,11 @@
 <!-- Popup Modal para Ver Reporte -->
 <div id="reportModal" class="modal">
     <div class="modal-content">
-        <span class="close" id="closeReportModal">&times;</span>
-        <h2>Detalles del Reporte</h2>
+        <div class="modal-header">
+            <h2>Detalles del Reporte</h2>
+            <span class="close" id="closeReportModal">&times;</span>
+        </div>        
+        
         <div id="reportDetails">
             <!-- Los detalles del reporte se cargarán aquí -->
         </div>
