--- a/Views/Admin/AdministrarTareas.cshtml
+++ b/Views/Admin/AdministrarTareas.cshtml
@@ -64,8 +64,11 @@
 <!-- Popup Modal para Agregar/Editar Tarea -->
 <div id="taskModal" class="modal">
     <div class="modal-content">
-        <span class="close" id="closeTaskModal">&times;</span>
-        <h2 id="modalTitle">Añadir Tarea</h2>
+        <div class="modal-header">
+            <h2 id="modalTitle">Añadir Tarea</h2>
+            <span class="close" id="closeTaskModal">&times;</span>
+        </div>
+        
         <form id="taskForm" method="post" asp-controller="Admin" asp-action="AgregarTarea">
             <input type="hidden" id="taskId" name="IdTarea">
 
