--- a/Views/Envio/ReportarProblema.cshtml
+++ b/Views/Envio/ReportarProblema.cshtml
@@ -17,8 +17,10 @@
 <!-- Popup Modal de Confirmación -->
 <div id="reportConfirmationModal" class="modal">
     <div class="modal-content">
-        <span class="close" id="closeReportConfirmation">&times;</span>
-        <h2>Confirmación</h2>
+        <div class="modal-header">
+            <h2 id="modalTitle">Confirmación</h2>
+            <span class="close" id="closeReportConfirmation">&times;</span>
+        </div>
         <p>Gracias por realizar tu reporte. Nuestro equipo lo revisará pronto.</p>
     </div>
 </div>
