--- a/Views/Pago/HistorialPagosPedidos.cshtml
+++ b/Views/Pago/HistorialPagosPedidos.cshtml
@@ -45,8 +45,11 @@
 <!-- Modal de Detalles del Pedido -->
 <div id="modalDetalles" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="cerrarModal()">&times;</span>
-        <h2>Detalles del Pedido</h2>
+        <div class="modal-header">
+            <h2 id="modalTitle">Detalles del Pedido</h2>
+            <span class="close" onclick="cerrarModal()">&times;</span>
+        </div>
+        
         <p id="detallesPedido"></p>
     </div>
 </div>
