--- a/Views/Pago/HistorialPagosPedidosAdministracion.cshtml
+++ b/Views/Pago/HistorialPagosPedidosAdministracion.cshtml
@@ -66,8 +66,11 @@
 <!-- Modal de Detalles del Pedido -->
 <div id="modalDetalles" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="cerrarModal()">&times;</span>
-        <h2>Detalles del Pedido</h2>
+        <div class="modal-header">
+            <h2 id="modalTitle">Detalles del Pedido</h2>
+            <span class="close" onclick="cerrarModal()">&times;</span>
+        </div>
+
         <p id="detallesPedido"></p>
     </div>
 </div>
@@ -75,8 +78,11 @@
 <!-- Modal para reenviar factura -->
 <div id="modalReenviarFactura" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="cerrarModal()">&times;</span>
-        <h2>Reenviar Factura</h2>
+        <div class="modal-header">
+            <h2>Reenviar Factura</h2>
+            <span class="close" onclick="cerrarModal()">&times;</span>
+        </div>
+        
         <p id="reenviarMensaje"></p>
         <button onclick="reenviarFacturaConfirmado()">Enviar Factura</button>
     </div>
