--- a/wwwroot/css/AdminPagos.css
+++ b/wwwroot/css/AdminPagos.css
@@ -100,21 +100,21 @@ h2 {
 }
 
 /* Estilos para los modales */
-.modal {
-    display: none; /* Los modales están ocultos por defecto */
-    position: fixed;
+/*.modal {
+    display: none;*/ /* Los modales están ocultos por defecto */
+    /*position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4); /* Fondo oscuro semitransparente */
-}
+    background-color: rgba(0, 0, 0, 0.4);*/ /* Fondo oscuro semitransparente */
+/*}
 
 .modal-content {
-    background-color: #FFFFFF; /* Fondo blanco para los modales */
-    margin: 15% auto;
+    background-color: #FFFFFF;*/ /* Fondo blanco para los modales */
+    /*margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -123,8 +123,8 @@ h2 {
 }
 
 .close {
-    color: #D91E1E; /* Color rojo para el ícono de cierre */
-    font-size: 30px;
+    color: #D91E1E;*/ /* Color rojo para el ícono de cierre */
+    /*font-size: 30px;
     font-weight: bold;
     position: absolute;
     top: 10px;
@@ -133,16 +133,16 @@ h2 {
 }
 
 .close:hover, .close:focus {
-    color: #F2A413; /* Color naranja al pasar el ratón por encima */
-}
+    color: #F2A413;*/ /* Color naranja al pasar el ratón por encima */
+/*}*/
 
 /* Estilos para el texto de los botones dentro de los modales */
-button {
+/*button {
     font-size: 16px;
-}
+}*/
 
 /* Estilos para las tablas dentro de los modales */
-.modal-content h2 {
+/*.modal-content h2 {
     font-weight: bold;
     color: #2EA629;
 }
@@ -151,9 +151,9 @@ button {
     font-size: 14px;
     color: #262626;
 }
-z
+z*/
 /* Estilo al pasar el ratón sobre las filas de la tabla */
-.tabla-pagos tr:hover {
-    background-color: #F2A413; /* Fondo naranja al pasar el ratón sobre una fila */
-    color: white;
-}
+/*.tabla-pagos tr:hover {
+    background-color: #F2A413;*/ /* Fondo naranja al pasar el ratón sobre una fila */
+    /*color: white;
+}*/
